lähteiden korjailua, kuvan muokkaus, jne.

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -1,12 +1,10 @@
 @article{ShenJiangLi,
+title     = {Controllable Load Management Approaches in Smart Grids},
 author    = {Shen, Js and Jiang, CW and Li, BS},
 journal   = {Energies},
-language  = {English},
-number    = {10},
-pages     = {11187,11202},
-publisher = {MDPI},
-title     = {Controllable Load Management Approaches in Smart Grids},
 volume    = {8},
+number    = {10},
+publisher = {MDPI},
 date      = {2015-10},
 }
 
@@ -21,44 +19,35 @@ month     = {10}
 }
 
 @incollection{sousaPortugal,
+title     = {Modbus},
 author    = {de Sousa, M. and Portugal, P.},
 booktitle = {Industrial Communication Systems},
-copyright = {Copyright 2019 Elsevier B.V., All rights reserved.},
 isbn      = {9781439802823},
-pages     = {36},
 publisher = {CRC Press},
-title     = {Modbus},
 date      = {2016-04-19}
 }
 
 @article{Setala,
 author    = {Niina Setälä},
 title     = {Tarjolla uusia mahdollisuuksia teollisuuden hukkalämmön hyödyntämiseen: korkealämpöpumput tuottavat jo 100 celsiusastetta},
-url       = {https://www-tekniikkatalous-fi.libproxy.tuni.fi/uutiset/tarjolla-uusia-mahdollisuuksia-teollisuuden-hukkalammon-hyodyntamiseen-korkealampopumput-tuottavat-jo-100-celsiusastetta/cecda00f-3b2c-493b-a325-b22a41daec5a},
-urldate   = {2020-03-24},
 date      = {2020-03-07},
-publisher = {Tekniikka & Talous}
+journal   = {Tekniikka \& Talous}
 }
 
 @incollection{DincerRosen,
 title     = {Chapter 7 - Exergy Analysis of Heat Pump Systems},
 author    = {Ibrahim Dincer and Marc A. Rosen},
-booktitle = {Exergy (Second Edition)},
+booktitle = {Exergy},
 publisher = {Elsevier},
 edition   = {Second Edition},
-pages     = {101 - 113},
 year      = {2013},
 isbn      = {978-0-08-097089-9},
-doi       = {https://doi.org/10.1016/B978-0-08-097089-9.00007-3},
-url       = {http://www.sciencedirect.com/science/article/pii/B9780080970899000073}
+doi       = {https://doi.org/10.1016/B978-0-08-097089-9.00007-3}
 }
 
-@techreport{SFSEN50160,
-title       = {Yleisestä Jakeluverkosta Syötetyn Sähkön Jänniteominaisuudet},
-publisher   = {Suomen Standardoimidiitto SFS},
-number      = {SFS-EN 50160:2010},
-institution = {Suomen Standardoimidiitto SFS},
-type        = {standardi}
+@misc{SFSEN50160,
+title        = {Yleisestä Jakeluverkosta Syötetyn Sähkön Jänniteominaisuudet SFS-EN 50160:2010},
+organization = {Suomen Standardoimidiitto SFS}
 }
 
 @manual{pehmokaynnistinopas,
@@ -92,29 +81,25 @@ urldate      = {2020-08-06}
 
 @techreport{modbusAppSpec,
 institution = {Modbus Organization},
-title       = {MODBUS Application Protocol Specification V1.1b3},
-type        = {standardi}
+title       = {MODBUS Application Protocol Specification V1.1b3}
 }
 
 @techreport{modbusSerialSpec,
 institution = {Modbus Organization},
 title       = {MODBUS over Serial Line Specification and Implementation Guide V1.02},
-url         = {https://modbus.org/specs.php},
-type        = {standardi}
+url         = {https://modbus.org/specs.php}
 }
 
 @techreport{modbusTCPIPSpec,
 institution = {Modbus Organization},
-title       = {MODBUS MESSAGING ON TCP/IP IMPLEMENTATION GUIDE V1.0b},
-url         = {https://modbus.org/specs.php},
-type        = {standardi}
+title       = {Modbus Messaging On TCP/IP Implementation quide V1.0b},
+url         = {https://modbus.org/specs.php}
 }
 
 @techreport{osi,
 institution = {International Telecommunication Union},
-title       = {INFORMATION TECHNOLOGY – OPEN SYSTEMS INTERCONNECTION -- BASIC REFERENCE MODEL: THE BASIC MODEL},
-url         = {https://www.itu.int/rec/T-REC-X.200},
-type        = {standardi}
+title       = {Information Technology -- Open Systems Interconnection -- Basic Reference Model: The Basic Model},
+url         = {https://www.itu.int/rec/T-REC-X.200}
 }
 
 @online{seCom,
@@ -129,22 +114,21 @@ note         = {\href{https://www.se.com/us/en/product-range-presentation/576-mo
 @techreport{modbusTCPIPTLSSpec,
 institution = {Modbus Organization},
 title       = {MODBUS/TCP Security-v21 2018-07-24},
-url         = {https://modbus.org/specs.php},
-type        = {standardi}
+url         = {https://modbus.org/specs.php}
 }
 
 @techreport{SGReadyReg,
 institution = {Bundesverband Wärmepumpe e.V.},
 title       = {Regularien Vergabe SG-Ready V 2.0},
 url         = {https://www.waermepumpe.de/fileadmin/user_upload/bwp_service/Guetesiegel/2020_SG-ready_Regularien_2.0_final.pdf},
-urldate     = {2020-09-13},
-type        = {standardi}
+urldate     = {2020-09-13}
 }
 
 @misc{pakonen,
+title        = {Sähköverkon häiriöt ja sähkön laatu -- opintomoniste},
 author       = {Mäkinen, Antti and Pakonen, Pertti},
 organization = {TTY},
-title        = {Sähköverkon häiriöt ja sähkön laatu -- opintomoniste}
+year         = {2019}
 }
 
 @misc{SVTSaLaTuo,
@@ -196,9 +180,7 @@ issn     = {1455-7517}
 
 @book{dictOfEnergy,
 title     = {Dictionary of energy},
-address   = {Oxford, United Kingdom},
-booktitle = {Dictionary of energy},
-edition   = {Second edition.},
+edition   = {Second edition},
 isbn      = {1-78539-112-7},
 publisher = {Elsevier Science \& Technology},
 }
@@ -222,8 +204,7 @@ urldate = {2020-08-20}
 @techreport{VDEARN4100,
 institution = {Forum Netztechnik/Netzbetrieb im VDE},
 title       = {VDE-AR-N 4100 Anwendungsregel:2019-04},
-url         = {https://www.vde.com/en/fnn/topics/technical-connection-rules/technical-connection-rules-for-low-voltage},
-type        = {standardi}
+url         = {https://www.vde.com/en/fnn/topics/technical-connection-rules/technical-connection-rules-for-low-voltage}
 }
 
 @online {katriVala,
@@ -245,8 +226,7 @@ author      = {Lars Henrik Haug},
 institution = {Norges vassdrags- og energidirektorat},
 title       = {Kommunikasjonsløsninger for sanntidsdata av strømforbruket},
 url         = {http://publikasjoner.nve.no/rapport/2018/rapport2018_70.pdf},
-urldate     = {2020-09-13},
-type        = {raportti}
+urldate     = {2020-09-13}
 }
 
 @thesis{Manner,
