--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -1,46 +1,38 @@
 @online{ampner,
-	title={Ampner ACE300 data sheet},
-  year={2020},
-	url={https://ampner.com/wp-content/uploads/2020/03/5012DSH0001B-Ampner-ACE-300-PV-Datasheet.pdf},
-  urldate={2020-06-22}
+	title   = {Ampner ACE300 data sheet},
+  year    = {2020},
+	url     = {https://ampner.com/wp-content/uploads/2020/03/5012DSH0001B-Ampner-ACE-300-PV-Datasheet.pdf},
+  urldate = {2020-06-22}
 }
 @book{Xiao,
 	author={Weidong Xiao},
 	year={2017},
 	title={Photovoltaic power system : modelling, design and control},
 	publisher={John Wiley \& Sons},
-	address={Hoboken, NJ},
-	note={Includes bibliographical references and index; ID: alma9910678587405973},
 	isbn={1-119-28032-X}
 }
 @online{SGdefinition,
-	title={Smart Grid definition},
-	url={https://smartgrid.epri.com/},
-  urldate={2020-06-15}
+	title         = {Smart Grid definition},
+  organization = {Electric Power Research Institute},
+	url          = {https://smartgrid.epri.com/},
+  urldate      = {2020-06-15}
 }
 @book{Adel&Hassan,
 	author={Adel Elbaset A. and M. S. Hassan},
+  title={Design and Power Quality Improvement of Photovoltaic Power System},
 	year={2017},
-	title={Design and Power Quality Improvement of Photovoltaic Power System},
 	publisher={Springer International Publishing},
-	address={Cham},
 	edition={1},
-	note={Includes bibliographical references.; ID: alma9910644062005973},
-	abstract={This book presents a case study on a new approach for the optimum design of rooftop, grid-connected photovoltaic-system installation. The study includes two scenarios using different brands of commercially available PV modules and inverters. It investigates and compares several different rooftop grid-connected PV-system configurations taking into account PV modules and inverter specifications. The book also discusses the detailed dynamic MATLAB/Simulink model of the proposed rooftop grid-connected PV system, and uses this model to estimate the energy production capabilities, cost of energy (COE), simple payback time (SPBT) and greenhouse gas (GHG) emissions for each configuration. The book then presents a comprehensive small signal MATLAB/Simulink model for the DC-DC converter operated under continuous conduction mode (CCM). First, the buck converter is modeled using state-space average model and dynamic equations, depicting the converter, are derived. Then a detailed MATLAB/Simulink model utilizing SimElectronics® Toolbox is developed. Lastly, the robustness of the converter model is verified against input voltage variations and step load changes.},
 	isbn={9783319474649},
 	doi={10.1007/978-3-319-47464-9}
 }
 @article{Joshi&Arora,
-  title = {Maximum power point tracking methodologies for solar PV systems – A review},
-  volume = {70},
-  year = {2017},
-  author = {Joshi, Puneet and Arora, Sudha},
-  copyright = {2016 Elsevier Ltd},
-  issn = {1364-0321},
-  journal = {Renewable \& sustainable energy reviews},
-  keywords = {Performance comparison ; Renewable energy and DC-DC converter ; Maximum power point tracking ; Photovoltaic system ; Electrical engineering ; Analysis ; Power electronics ; Alternative energy sources ; Electric current converters},
-  language = {eng},
-  pages = {1154-1177},
+  title     = {Maximum power point tracking methodologies for solar PV systems – A review},
+  author    = {Joshi, Puneet and Arora, Sudha},
+  volume    = {70},
+  year      = {2017},
+  issn      = {1364-0321},
+  journal   = {Renewable \& sustainable energy reviews},
   publisher = {Elsevier BV},
 }
 @techreport{JASolar,
@@ -48,49 +40,43 @@
 	title={JAM60S10 320-340/MR Datasheet},
 	url={https://www.jasolar.com/uploadfile/2019/1031/20191031104157948.pdf}
 }
-@techreport{VJV2018,
-	author={Fingrid},
-  date={2018-11-16},
-	title={Voimalaitosten järjestelmätekniset vaatimukset VJV2018},
-	institution={Fingrid}
+@misc{VJV2018,
+	organization = {Fingrid},
+  date         = {2018-11-16},
+	title        = {Voimalaitosten järjestelmätekniset vaatimukset VJV2018}
 }
 @book{Willeke&Weber,
-	author={G. Willeke and Eicke R. Weber},
-	year={2013},
-	title={Advances in photovoltaics. Part 2},
-	publisher={Elsevier},
-	address={Boston},
-	note={ID: alma9910640682605973},
-	abstract={Semiconductors and Semimetals has distinguished itself through the careful selection of well-known authors, editors, and contributors. Originally widely known as the ""Willardson and Beer"" Series, it has succeeded in publishing numerous landmark volumes and chapters. The series publishes timely, highly relevant volumes intended for long-term impact and reflecting the truly interdisciplinary nature of the field. The volumes in Semiconductors and Semimetals have been and will continue to be of great interest to physicists, chemists, materials scientists, and device engineers in},
-	isbn={0-12-384702-8}
+	author    = {G. Willeke and Eicke R. Weber},
+  title     = {Advances in photovoltaics. Part 2},
+	year      = {2013},
+	publisher = {Elsevier},
+	isbn      = {0-12-384702-8}
 }
 @misc{pearlStreetStation,
-	author={Carl Sulzberger},
-  date={2011-05-10},
-	title={The Pearl Street Generating Station, 1882},
-	url={https://ethw.org/Milestones:Pearl_Street_Station,_1882#References_and_Further_Reading},
-  urldate={2020-03-25}
+	author  = {Carl Sulzberger},
+  date    = {2011-05-10},
+	title   = {The Pearl Street Generating Station, 1882},
+	url     = {https://ethw.org/Milestones:Pearl_Street_Station,_1882},
+  urldate = {2020-03-25}
 }
 @book{Messenger,
-	author={Roger A. Messenger and Jerry Ventre},
-	year={2010},
-	title={Photovoltaic systems engineering},
-	publisher={CRC Press},
-	address={Boca Raton, Florida] ;},
-	edition={3},
-	note={Includes bibliographical references at the end of each chapters.; ID: alma9910679044305973},
-	abstract={BackgroundPopulation and Energy DemandEnergy UnitsCurrent World Energy Use PatternsExponential GrowthHubbert's Gaussian ModelNet Energy, Btu Economics, and the Test for SustainabilityDirect Conversion of Sunlight to Electricity with PhotovoltaicsThe SunThe Solar SpectrumThe Effect of Atmosphere on SunlightSunlight SpecificsCapturing SunlightIntroduction to PV SystemsThe PV CellThe PV ModuleThe PV ArrayEnergy StoragePV System LoadsPV System AvailabilityAssociated System Electronic ComponentsGeneratorsBalance of System (BOS) ComponentsGrid-Connected Utility-Interactive PV SystemsApplicable Codes},
-	isbn={1-315-21839-9}
+  title     = {Photovoltaic systems engineering},
+  author    = {Roger A. Messenger and Jerry Ventre},
+  year      = {2010},
+  publisher = {CRC Press},
+  edition   = {3},
+  isbn      = {1-315-21839-9}
 }
 @misc{SSProds,
-	title={SUNSPEC MODBUS CERTIFIED PRODUCTS},
-	url={https://sunspec.org/sunspec-modbus-certified-products/},
-  	urldate={2020-03-24}
+  title        = {SUNSPEC MODBUS CERTIFIED PRODUCTS},
+  organization = {SunSpec Alliance},
+  url          = {https://sunspec.org/sunspec-modbus-certified-products/},
+  urldate      = {2020-03-24}
 }
 @misc{SSFactSheet,
   organization = {SunSpec Alliance},
   title        = {SunSpec Modbus Interface fact sheet},
-  url          = {http://sunspec.org/wp-content/uploads/2019/09/SunSpec-Modbus-FactSheet-RevA-2019-07-web.pdf},
+  url          = {https://sunspec.org/wp-content/uploads/2019/09/SunSpec-Modbus-FactSheet-RevA-2019-07-web.pdf},
   urldate      = {2020-08-13}
 }
 @misc{SSESModels,
@@ -101,61 +87,47 @@
 }
 @misc{SSTech,
   organization = {SunSpec Alliance},
-  title        = {SunSpec	Technology	Overview - Spec	Alliance	Interoperability	Specification},
+  title        = {SunSpec Technology Overview - Spec Alliance Interoperability Specification},
   url          = {http://sunspec.org/wp-content/uploads/2019/09/SunSpec-Techonology-Overview-12040.pdf},
   urldate      = {2020-08-13}
 }
 @article{Tuballa&Abundo,
-  title = {A review of the development of Smart Grid technologies},
-  volume = {59},
-  year = {2016},
-  author = {Tuballa, Maria Lorena and Abundo, Michael Lochinvar},
-  copyright = {2016 Elsevier Ltd},
-  issn = {1364-0321},
-  journal = {Renewable \& sustainable energy reviews},
-  keywords = {Intelligent grid ; Electricity grids ; Power systems ; Smart Grid technologies ; Smart Grid ; Energy policy ; Global temperature changes ; Green technology ; Electric power systems},
-  language = {eng},
-  pages = {710-725},
+  title     = {A review of the development of Smart Grid technologies},
+  volume    = {59},
+  year      = {2016},
+  author    = {Tuballa, Maria Lorena and Abundo, Michael Lochinvar},
+  issn      = {1364-0321},
+  journal   = {Renewable \& sustainable energy reviews},
+  pages     = {710-725},
   publisher = {Elsevier BV},
 }
 @misc{IEEE1815.1,
-	series = {IEEE Standard for Exchanging Information Between Networks Implementing IEC 61850 and IEEE Std 1815(TM) [Distributed Network Protocol (DNP3)]},
-	title = {IEEE Standard for Exchanging Information Between Networks Implementing IEC 61850 and IEEE Std 1815(TM) [Distributed Network Protocol (DNP3)]},
-	year = {2016},
-	copyright = {2016 IEEE},
-	isbn = {9781504405980},
-	keywords = {Automation ; Substations ; mapping ; upgrade ; power system ; feeder ; IEEE Standards ; utility ; evolution ; DNP3 ; network ; communications ; Power distribution ; substation ; NIST ; IEEE 1815(TM) ; Power system reliability ; IEC Standards ; gateway ; IEC 61850},
-	language = {eng},
-	pages = {1-358},
+	title     = {IEEE Standard for Exchanging Information Between Networks Implementing IEC 61850 and IEEE Std 1815(TM) [Distributed Network Protocol (DNP3)]},
+	year      = {2016},
+	isbn      = {9781504405980},
 	publisher = {IEEE},
 }
 
-@INPROCEEDINGS{DNP3Inv,
-  author={K. {Prabakar} and A. {Singh} and C. {Tombari}},
-  booktitle={2019 IEEE 46th Photovoltaic Specialists Conference (PVSC)},
-  title={IEEE 1547-2018 Based Interoperable PV Inverter with Advanced Grid-Support Functions},
-  year={2019},
-  volume={},
-  number={},
-  pages={2072-2077},
+@inproceedings{DNP3Inv,
+  author    = {K. {Prabakar} and A. {Singh} and C. {Tombari}},
+  title     = {IEEE 1547-2018 Based Interoperable PV Inverter with Advanced Grid-Support Functions},
+  booktitle = {2019 IEEE 46th Photovoltaic Specialists Conference (PVSC)},
+  year      = {2019}
 }
 
 @misc{DNP3AppNote,
-  author       = {SunSpec Alliance},
-  title        = {NEW STANDARD COMMUNICATION MODEL ENABLES GRID OPERATORS TO ENHANCE PERFORMANCE, VALUE OF DISTRIBUTED ENERGY RESOURCES},
+  organization = {SunSpec Alliance},
+  title        = {New Standard Communication Model Enables Grid Operatirs to Enhance Performance, Value of Distributed Energy Resources},
   url          = {https://sunspec.org/new-standard-communication-model-enables-grid-operators-enhance-performance-value-distributed-energy-resources/},
-  urldate      = {2020-08-20},
-  date		   = {2019-01-14},
+  date		     = {2019-01-14},
+  urldate      = {2020-08-20}
 }
 
-@INPROCEEDINGS{61850funcs,
-	author={T. {Miranda} and V. {Delgado-Gomes} and J. F. {Martins}},
-	booktitle={2018 International Conference on Intelligent Systems (IS)},
-	title={On the use of IEC 61850-90-7 for Smart Inverters Integration},
-	year={2018},
-	volume={},
-	number={},
-	pages={722-726},
+@inproceedings{61850funcs,
+	author    = {T. {Miranda} and V. {Delgado-Gomes} and J. F. {Martins}},
+	booktitle = {2018 International Conference on Intelligent Systems (IS)},
+	title     = {On the use of IEC 61850-90-7 for Smart Inverters Integration},
+	year      = {2018}
 }
 
 @manual{SMAManual,
