--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -1,11 +1,6 @@
-\newglossaryentry{iso}{
-  name={ISO},
-  description={International Organization for Standardization}
-}
-
 \newglossaryentry{plc}{
   name={PLC},
-  description={programmable logic controller}
+  description={Programmable Logic Controller, ohjelmoitava logiikka}
 }
 
 \newglossaryentry{OSI}{
@@ -30,42 +25,42 @@
 
 \newglossaryentry{RS}{
   name={RS},
-  description={Recommended standard}
+  description={Recommended Standard}
 }
 
 \newglossaryentry{PDU}{
   name={PDU},
-  description={protocol data unit}
+  description={Protocol Data Unit}
 }
 
 \newglossaryentry{ADU}{
   name={ADU},
-  description={application data unit, tunnetaan myös nimellä APDU, eli Application Protocol Data Unit}
+  description={Application Data Unit, tunnetaan myös nimellä APDU, eli Application layer Protocol Data Unit}
 }
 
 \newglossaryentry{VPN}{
   name={VPN},
-  description={virtual private network}
+  description={Virtual Private Network}
 }
 
 \newglossaryentry{SG}{
   name={SG},
-  description={Smart grid -- älykäs sähköverkko}
+  description={Smart Grid -- älykäs sähköverkko}
 }
 
 \newglossaryentry{RTU}{
   name={RTU},
-  description={remote terminal unit}
+  description={Remote Terminal Unit}
 }
 
 \newglossaryentry{CHP}{
   name={CHP},
-  description={compined heat and power -- yhteistuotantovoimalaitos}
+  description={Compined Heat and Power -- yhteistuotantovoimalaitos}
 }
 
 \newglossaryentry{V2G}{
   name={V2G},
-  description={vehicle-to-grid}
+  description={Vehicle-to-Grid}
 }
 
 \newglossaryentry{IEC}{
@@ -105,12 +100,12 @@
 
 \newglossaryentry{SCADA}{
   name={SCADA},
-  description={Supervisory control and data acquisition}
+  description={Supervisory Control And Data Acquisition}
 }
 
 \newglossaryentry{AMR}{
   name={AMR},
-  description={Automatic meter reading}
+  description={Automatic Meter Reading}
 }
 
 \newglossaryentry{AMI}{
