--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -30,23 +30,23 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
 \section{Kysyntäjousto}
 
-  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muun muassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä. Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen\parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan.\parencite{energiateollisuus} Niin kutsutut perusvoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja CHP-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta.\parencite{SVTSaLaTuo} perusvoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti sen hetkisessä maksimitehopisteessä, sillä polttoainekustannuksia ei ole.
+  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muun muassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä. Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen \parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan. \parencite{energiateollisuus} Niin kutsutut perusvoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja \gls{CHP}-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta. \parencite{SVTSaLaTuo} Perusvoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti sen hetkisessä maksimitehopisteessä, sillä polttoainekustannuksia ei ole.
 
-  Vaikka lauhdevoimalaitoksia käytetään osaltaan säätötehona, niitä ei kannata kuitenkaan käyttää tehonkulutuksen lyhytaikaisten vaihteluiden kattamiseen. Normaalissa laudevoimalaitoksessa esimerkiksi käynnistysajat ovat niin pitkiä, että sekuntitasolla tapahtuva tuotannon lisäys ei onnistu.\parencite{VJV2018} Suomessa yleisesti ja erityisesti sekuntitasolla tapahtuva tehotasapainon säätö tapahtuu pääosin vesivoimalla\parencite{energiateollisuus}, sillä vesivoiman tehontuottoa kyetään säätämään lähes reaaliajassa säätelemällä veden virtausta turbiineille. Sähköenergiajärjestelmässä esiintyvä tehoepätasapaino aiheuttaa muutoksia jännitteen taajuuteen. Ylituotannon aikana voimaloiden generaattoreiden pyörimistä vastustava momentti pienenee, jolloin pyörimisnopeus ja täten jännitteen taajuus pääsee kasvamaan. Alituotannon kohdalla tilanne on päinvastainen. Jännitteen taajuutta seuraamalla kyetään ohjaamaan säätövoiman tuotantoa tai kulutuksen vähentämistä lähes reaaliajassa. \parencite{fingrid}
+  Vaikka lauhdevoimalaitoksia käytetään osaltaan säätötehona, niitä ei kannata kuitenkaan käyttää tehonkulutuksen lyhytaikaisten vaihteluiden kattamiseen. Normaalissa laudevoimalaitoksessa esimerkiksi käynnistysajat ovat niin pitkiä, että sekuntitasolla tapahtuva tuotannon lisäys ei onnistu. \parencite{VJV2018} Suomessa yleisesti ja erityisesti sekuntitasolla tapahtuva tehotasapainon säätö tapahtuu pääosin vesivoimalla \parencite{energiateollisuus}, sillä vesivoiman tehontuottoa kyetään säätämään lähes reaaliajassa säätelemällä veden virtausta turbiineille. Sähköenergiajärjestelmässä esiintyvä tehoepätasapaino aiheuttaa muutoksia jännitteen taajuuteen. Ylituotannon aikana voimaloiden generaattoreiden pyörimistä vastustava momentti pienenee, jolloin pyörimisnopeus ja täten jännitteen taajuus pääsee kasvamaan. Alituotannon kohdalla tilanne on päinvastainen. Jännitteen taajuutta seuraamalla kyetään ohjaamaan säätövoiman tuotantoa tai kulutuksen vähentämistä lähes reaaliajassa. \parencite{fingrid}
 
-  Uusiutuvien energialähteiden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava uusiutuvien energialähteiden käyttö luo entisestään tarvetta säätövoimalle.\parencite{energiateollisuus} Säätövoima on kuitenkin huomattavasti kalliimpaa kuin perusvoima. Kulutushuippujen aikana käytettävien huippuvoimalaitosten polttoainekulut ovat suuret, niiden käyttäessä sähköntuotantoon esimerkiksi maakaasua tai hiiltä. Säätövoimaksi hyvin soveltuvaa vesivoimaa ei myöskään ole tarjolla määrättömästi. Sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin, sillä akustojen kustannukset ovat vielä suuret. Monesta tekijästä johtuen sähkön tuotanto on muuttumassa vähemmän joustavaksi.
+  Uusiutuvien energialähteiden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava uusiutuvien energialähteiden käyttö luo entisestään tarvetta säätövoimalle. \parencite{energiateollisuus} Säätövoima on kuitenkin huomattavasti kalliimpaa kuin perusvoima. Kulutushuippujen aikana käytettävien huippuvoimalaitosten polttoainekulut ovat suuret, niiden käyttäessä sähköntuotantoon esimerkiksi maakaasua tai hiiltä. Säätövoimaksi hyvin soveltuvaa vesivoimaa ei myöskään ole tarjolla määrättömästi. Sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin, sillä akustojen kustannukset ovat vielä suuret. Monesta tekijästä johtuen sähkön tuotanto on muuttumassa vähemmän joustavaksi.
 
-  Yksi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia ongelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa.\parencite{fingrid} Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Tämä kannustaa kuluttajia siirtämään sähkönkulutustaan pois vilkkaimmilta sähkökäyttötunneilta tehden kuluttajien tehonkulutuksesta kokonaisuudessaan tasaisempaa.
+  Yksi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia ongelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa. \parencite{fingrid} Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Tämä kannustaa kuluttajia siirtämään sähkönkulutustaan pois vilkkaimmilta sähkökäyttötunneilta tehden kuluttajien tehonkulutuksesta kokonaisuudessaan tasaisempaa.
 
-  Sähköverkossa olevilla suurilla yhtenäisillä kuormilla, joiden kulutusta pystytään ohjaamaan, voidaan toteuttaa kysyntäjoustoa\parencite{fingrid}. Suomessa on käytössä noin miljoona (vuonna 2019) lämpöpumppua\parencite{sulpu}. Erittäin kylmän sään akana lämpöpumput ovat käynnissä pidempiä aikoja ja useammin, jolloin niiden yhteenlaskettu teho on merkittävä tehotasapainon säilyttämisen kannalta. Suurimman lämmitystehontarpeen aikana saatetaan myöskin käyttää lämpöpumpun yhteyteen asennettua lisälämmitysvastusta, jolloin yksittäisen lämpöpumpun sähköteho nousee selvästi.
+  Sähköverkossa olevilla suurilla yhtenäisillä kuormilla, joiden kulutusta pystytään ohjaamaan, voidaan toteuttaa kysyntäjoustoa \parencite{fingrid}. Suomessa on käytössä noin miljoona (vuonna 2019) lämpöpumppua \parencite{sulpu}. Erittäin kylmän sään akana lämpöpumput ovat käynnissä pidempiä aikoja ja useammin, jolloin niiden yhteenlaskettu teho on merkittävä tehotasapainon säilyttämisen kannalta. Suurimman lämmitystehontarpeen aikana saatetaan myöskin käyttää lämpöpumpun yhteyteen asennettua lisälämmitysvastusta, jolloin yksittäisen lämpöpumpun sähköteho nousee selvästi.
 
 \subsection{Virtuaalivoimalat}
 
-  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu pienistä sähköä tuottavista yksiköistä tai yhdestä tai useammasta kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtuaalivoimalan haltija voi osallisuta kanteverkkoyhtiö Fingridin ylläpitämille reservimarkkinoille tekniset vaatimukset täyttävällä joustokapasiteetillaan. Fingrid hankkii käyttöönsä eri tyyppisiä reservejä varautuakseen kulutuksen normaaliin vaihteluun tai mahdollisiin häiriötilanteisiin. Fingrid maksaa virtuaalivoimalalle tehoreservin ylläpidosta reservityypistä riippuvaa hintaa. Mikäli reservi aktivoituu käyttöön ja virtuaalivoimala kykenee myös syöttämään sähhkötehoa verkkoon, maksaa fingrid myös syötetystä energiasta. Suuren kulutuksen aikana tai alituotantotilanteessa voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa virtuaalivoimala kasvattaa kulutusta vastaamaan sen hetkistä tuotantoa. Virtuaalivoimalan ohjaus tapahtuuesimerkiksi automaattisesti kantaverkon taajuuden mukaan tai manuaalisesti Fingridin pyynnöstä, riippuen jälleen reservituotteen tyypistä.\parencite{fingrid, reserviLaki}
+  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu pienistä sähköä tuottavista yksiköistä tai yhdestä tai useammasta kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtuaalivoimalan haltija voi osallisuta kanteverkkoyhtiö Fingridin ylläpitämille reservimarkkinoille tekniset vaatimukset täyttävällä joustokapasiteetillaan. Fingrid hankkii käyttöönsä eri tyyppisiä reservejä varautuakseen kulutuksen normaaliin vaihteluun tai mahdollisiin häiriötilanteisiin. Fingrid maksaa virtuaalivoimalalle tehoreservin ylläpidosta reservityypistä riippuvaa hintaa. Mikäli reservi aktivoituu käyttöön ja virtuaalivoimala kykenee myös syöttämään sähhkötehoa verkkoon, maksaa fingrid myös syötetystä energiasta. Suuren kulutuksen aikana tai alituotantotilanteessa voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa virtuaalivoimala kasvattaa kulutusta vastaamaan sen hetkistä tuotantoa. Virtuaalivoimalan ohjaus tapahtuuesimerkiksi automaattisesti kantaverkon taajuuden mukaan tai manuaalisesti Fingridin pyynnöstä, riippuen jälleen reservituotteen tyypistä. \parencite{fingrid, reserviLaki}
 
-  Osa virtuaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Mikäli virtuaalivoimala koostuu kulutustaan vähentävistä yksiköistä, ei fingridin voimalaitoksille tarkoitetut verkkoonliittymismääräykset ole päteviä\parencite{VJV2018}.
+  Osa virtuaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Mikäli virtuaalivoimala koostuu kulutustaan vähentävistä yksiköistä, ei fingridin voimalaitoksille tarkoitetut verkkoonliittymismääräykset ole päteviä \parencite{VJV2018}.
 
-  Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa\parencite{sello}. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutaan \gls{V2G}-tekniikasta\parencite{dictOfEnergy}. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta\parencite{dictOfEnergy}.
+  Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa \parencite{sello}. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutaan \gls{V2G}-tekniikasta \parencite{dictOfEnergy}. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta \parencite{dictOfEnergy}.
 
   Kotitalouksien aurinkosähköjärjestelmistä koostuva virtuaalivoimala perustuu akullisten järjestelmien tuottamaan joustoon. Järjestelmässä olevien akkujen ei tarvitse olla kovinkaan suuria, jos niiden määrä sähköjärjestelmässä on suuri. Tällöin voidaan ohjata hyvinkin suurta määrää erittäin nopeasti säätyvää tehoa. Akkujen korkea hinta luo tosin korkean kynnyksen hankinnalle, varsinkin kun kuluttajan saamat hyödyt ei välttämättä ole kovinkaan suuret. Tämän sovelluksen käyttöä rajoittaa kommunikaatiorajapintojen monimutkaisuus samalla tavalla kuin aurinkosähköjärjestelmien etähallintaa; virtuaalivoimalaa hallinnoiva aggregaatti tarvitsee kommunikaatiorajapinnan jokaiseen kohteeseen, sillä nykyisellään sitä ei verkonhaltijalla ole. Tämä on tosin mahdollista toteuttaa, jos virtuaalivoimaloille saataisiin standardoitua rajapinta, sillä silloin valmistajat voisivat integroida tämän rajapinnan heidän omaan verkkopalveluun, eikä järjestelmä vaatisi tällöin fyysisiä muutoksia ollenkaan.
 
